--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,8 @@ header, .navbar{
 }
 
 .navbar-expanded-lg .navbar-nav .nav-link{
-    padding: 1rem, .8rem; /*rem trabalha com o tamanho da fonte*/
+    padding: 1rem, .8rem;
+    /*rem trabalha com o tamanho da fonte*/
 }
 
 .invert{
